added ALS theory and fixed some bugs with data_handler

--- a/src_submission/ALS.ipynb
+++ b/src_submission/ALS.ipynb
@@ -18,7 +18,17 @@
     "---\n",
     "## Theory behind\n",
     "\n",
-    "TODO\n",
+    "Rating of user u and item i is estimated based on the following equation: \n",
+    "\n",
+    "$r_{ui} = \\mu + b_u + b_i$\n",
+    "\n",
+    "where $\\mu$ is the overall average rating, $b_u$ and $b_i$ are biases that capture tendencies of users to rate higher/lower and tendencies of items to be rated higher/lower.\n",
+    "\n",
+    "The regularized square loss over which we optimize looks as follows:\n",
+    "\n",
+    "$\\sum_{r_{ui} \\in R_{train}}(r_{ui}-(\\mu + b_u + b_i))^2 + \\lambda (b_u^2 + b_i^2)$\n",
+    "\n",
+    "The optimization method used to minimize the loss function above is ALS which alternatively updates $b_u$ and $b_i$ to convexify the loss function. \n",
     "\n",
     "---"
    ]
