--- a/src_submission/SVD_basic.ipynb
+++ b/src_submission/SVD_basic.ipynb
@@ -31,7 +31,7 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from data_handler import load_data, write_submission_file"
+    "from data_handler import load_train_data, write_submission, get_prediction_ratings_from_matrix"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
    ],
    "source": [
     "# build the rating matrix from the training data set(available ratings), entries for unvailable ratings are set to 0\n",
-    "X = load_data()\n",
+    "X = load_train_data()\n",
     "print(X[0:10,0:10])"
    ]
   },
@@ -268,8 +268,8 @@
    "outputs": [],
    "source": [
     "# write the predicted ratings back to a csv file\n",
-    "output = write_submission_file(X_pred, \"submission_SVD_basic_1.csv\")\n",
-    "print(output[0:100])"
+    "ratings = get_prediction_ratings_from_matrix(X_pred)\n",
+    "write_submission(ratings, 'submission_SVD_basic_1.csv')"
    ]
   },
   {
