added KNN_bias theory

--- a/src_submission/KNN_bias.ipynb
+++ b/src_submission/KNN_bias.ipynb
@@ -17,7 +17,19 @@
     "---\n",
     "## Theory behind\n",
     "\n",
-    "TODO\n",
+    "KNN based methods will predict ratings based on similarity to other users and items. For example in a user-based approach, a user u rates an item i based on ratings of other users that are similar to u. For the similarity metric we use the pearson correlation coefficient. \n",
+    "\n",
+    "The prediction is computed as follows:\n",
+    "\n",
+    "$r_{ui} = b_{ui} + \\frac{\\sum_{v \\in N_i^k(u)}sim(u,v) (r_{vi}-b_{vi})}{\\sum_{v \\in N_i^k(u)}sim(u,v)}$\n",
+    "\n",
+    "where $N_i^k(u)$ are the the k users, that rated item i, which are most similar to user u. \n",
+    "\n",
+    "$b_{ui}$ is the global average plus a user and item bias:\n",
+    "\n",
+    "$b_{ui} = \\mu + b_u + b_i$.\n",
+    "\n",
+    "The prediction basically takes $b_{ui}$ and adds the deviation of similar users that rated item i to it.\n",
     "\n",
     "---"
    ]
