added SVD_improved theory (Simon Funk)

--- a/src_submission/SVD_improved.ipynb
+++ b/src_submission/SVD_improved.ipynb
@@ -14,6 +14,18 @@
     "---\n",
     "## Theory behind\n",
     "\n",
+    "\n",
+    "### Simon Funk: Netflix Update (2006)\n",
+    "see [Netflix Update](http://sifter.org/~simon/journal/20061211.html)\n",
+    "\n",
+    "__approach__: apply SVD to get matrix factorization of X = MU.\n",
+    "\n",
+    "computing the eigenvectors of $XX^T$ and $X^TX$ and the associated eigenvalues is not the only way of computing the SVD of a dense matrix! Can compute it based on a minimization problem:\n",
+    "\n",
+    "$min_{p_u, q_i} \\sum_{x_{ui}}(r_{ui}-p_u*q_i)^2$ s.t $p_u$'s and $q_i$'s are orthogonal.\n",
+    "\n",
+    "Now the __main idea__ of Simon Funk is to just ignore missing ratings and orthogonality constraint. Use SGD  to optimize objective (also add regularizers which are important because can easily overfit). In the end we have an approximation of SVD. \n",
+    "\n",
     "### [KBV09] Yehuda Koren. Matrix factorization techniques for recommender systems.\n",
     "\n",
     "see [Matrix Factorization techniques](https://datajobs.com/data-science-repo/Recommender-Systems-[Netflix].pdf)\n",
